<resources>
    <string name="app_name">Lab3</string>
    <string name="behind">Недолет</string>
    <string name="ahead">Перелет</string>
    <string name="hit">В точку!</string>
    <string name="input_value">Ввести значение</string>
    <string name="play_more">Сыграть ещё</string>
    <string name="try_to_guess">Сложность: Средне\nУгадайте число (1 &#8211; 50)</string>
    <string name="try_to_guess_easy">Сложность: Легко\nУгадайте число (1 &#8211; 25)</string>
    <string name="try_to_guess_hard">Сложность: Сложно\nУгадайте число (1 &#8211; 100)</string>
    <string name="error">Неверный ввод</string>
    <string name="difficulty">Выберите сложность</string>
    <string name="easy">Легко</string>
    <string name="normal">Средне</string>
    <string name="hard">Сложно</string>
</resources>

